# DevMaigc

./: .gitignore
DevMagic-Plugin/DevMagic-Plugin-Docker/: CMakeLists.txt  dockerwidget.cpp  dockerwidget.h  main.cpp
DevMagic-Plugin/DevMagic-Plugin-Git/: CMakeLists.txt  gitwidget.cpp  gitwidget.h  main.cpp
DevMagic-Plugin/DevMagic-Plugin-Json/: CMakeLists.txt
DevMagic-Plugin/DevMagic-Plugin-Json/include/: devplugin.h
DevMagic-Plugin/DevMagic-Plugin-Json/resources/: icons.qrc  plugin.json.in  styles.qss
DevMagic-Plugin/DevMagic-Plugin-Json/src/: expandbutton.cpp  expandbutton.h  goconverter.h  javaconverter.h  jsonconverter.h  jsoneditor.cpp  jsoneditor.h  jsonhighlighter.cpp  jsonhighlighter.h  jsonplugin.cpp  jsonplugin.h  linenumberarea.h  main.cpp  xmlconverter.h
DevMagicMain/: CMakeLists.txt
DevMagicMain/resources/qml/: Main.qml
DevMagicMain/resources/qml/components/: SettingPage.qml
DevMagicMain/src/: application.h  configmanager.cpp  configmanager.h  devplugin.h  listwidegt.cpp  listwidegt.h  main.cpp  mainwindow.cpp  mainwindow.h  pluginmanagedtabwidget.cpp  pluginmanagedtabwidget.h  pluginmanagerdialog.cpp  pluginmanagerdialog.h  pluginsmanager.cpp  pluginsmanager.h  scheckboxheaderview.h  settingsdialog.cpp  settingsdialog.h
resources/: devmagic.qrc
resources/qml/: MainPage.qml  WelcomePage.qml
resources/qml/components/: DevPathInfo.qml  FunctionalCard.qml  PluginWrapper.qml
src/: main.cpp
